# asdfbot

./: README.md  pyproject.toml  requirements.bak  requirements.txt
src/db/: maimai_schema.txt
src/libraries/: alias.py  april_fool.py  checker.py  database.py  dbquery.py  image.py  image_range.py  jtquery.py  query.py  sendpics.py  tool.py  tool_range.py
src/libraries/maimai/: database.py  find_cover.py  maimai_best.py  maimai_best_legacy.py  maimai_info.py  maimai_network.py  maimai_plate_query.py  maimai_type.py  maimaidx_music.py  maimaidx_musicinfo.py  static_lists_and_dicts.py
src/plugins/: mai.py  maimaidx.py  rangebot_maimai.py
