[project]
name = "asdf-nonebot"
version = "0.1.0"
description = "asdf-nonebot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_alconna"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
